--- a/mysite/funds/templates/funds/hold_on_funds.html
+++ b/mysite/funds/templates/funds/hold_on_funds.html
@@ -10,5 +10,5 @@
 	</table>    
 	<a href="{% url 'funds:refresh_netprice' %}">update netprice</a> 
 {% else %}
-    <p>No polls are available.</p>
+    <p>No funds are available.</p>
 {% endif %}
