--- a/mysite/funds/templates/funds/hold_on_funds.html
+++ b/mysite/funds/templates/funds/hold_on_funds.html
@@ -1,14 +1,55 @@
-{% if hold_on_fund_list %}
-	<table border=1>
-    {% for fnd in hold_on_fund_list %}
-    	<tr>
-			<td>{{ fnd.fund.fund_name }}</td>
-			<td>{{ fnd.netprice }}</td>
-			<td>{{ fnd.date|date:'m-d-Y' }}</td>
-		</tr>        
-    {% endfor %}
-	</table>    
-	<a href="{% url 'funds:refresh_netprice' %}">update netprice</a> 
-{% else %}
-    <p>No funds are available.</p>
-{% endif %}
+{% extends 'fund_base_page.html' %}
+
+{% block title %} Hold on Funds {% endblock %}
+
+{% block body %}
+
+	<div class="panel panel-info">
+		<div class="panel-heading">
+			<h3>Hold on funds</h3>
+		</div>
+		<div class="panel-body">
+			<div class="pull-right">
+				<a href="{% url 'funds:refresh_netprice' %}" class="btn btn-default">
+					<i class="fa fa-cloud-download fa-lg" aria-hidden="true"></i> net value</a> 	
+			</div>		
+		</div>
+		
+	{% if hold_on_fund_list %}
+		<table class="table">
+			<tr>
+				<th>Fund Name</th>
+				<th>Net Price</th>
+				<th>Latest Date</th>
+			</tr>
+	    {% for fnd in hold_on_fund_list %}
+	    	<tr>
+				<td><a href="#">{{ fnd.fund.fund_name }}</a></td>
+				<td>{{ fnd.netprice }}</td>
+				<td>{{ fnd.date|date:'m-d-Y' }}</td>
+			</tr>        
+	    {% endfor %}
+		</table>    
+
+	{% else %}
+	    <p>No funds are available.</p>
+	{% endif %}
+
+	</div>
+
+
+
+{% endblock %}
+
+
+<!-- ignore js -->
+{% comment %}  
+{% block js %}
+	<script type="text/javascript">
+		$(document).ready(function(){
+			alert("I'm here.");
+		})
+	</script>
+
+{% endblock %}
+{% endcomment %}
