--- a/mysite/funds/templates/funds/hold_on_funds.html
+++ b/mysite/funds/templates/funds/hold_on_funds.html
@@ -11,7 +11,12 @@
 		<div class="panel-body">
 			<div class="pull-right">
 				<a href="{% url 'funds:refresh_netprice' %}" class="btn btn-default">
-					<i class="fa fa-cloud-download fa-lg" aria-hidden="true"></i> net value</a> 	
+					<i class="fa fa-cloud-download fa-lg fa-fw" aria-hidden="true"></i> 
+					update net value</a>
+				<a href="{% url 'funds:hold_on_reports' %}" class="btn btn-default">
+					see reports
+					<i class="fa fa-chevron-right  fa-lg fa-fw"></i>
+				</a> 	
 			</div>		
 		</div>
 		
