decorate report page'

--- a/mysite/funds/templates/funds/hold_on_funds.html
+++ b/mysite/funds/templates/funds/hold_on_funds.html
@@ -21,7 +21,7 @@
 		</div>
 		
 	{% if hold_on_fund_list %}
-		<table class="table">
+		<table class="table table-striped">
 			<tr>
 				<th>Fund Name</th>
 				<th>Net Price</th>
