--- a/mysite/funds/templates/fund_base_page.html
+++ b/mysite/funds/templates/fund_base_page.html
@@ -10,6 +10,17 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'funds/content/bootstrap-theme.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'funds/content/font-awesome-4.7.0/css/font-awesome.min.css' %}">
 
+	<style type="text/css">
+		.tr_hover:hover {
+			/*color: red;*/
+			border: 2px solid gray;
+			/*font-size: 120%;*/
+			font-weight: bold;
+		}
+	</style>
+
+	{% block css %}
+	{% endblock %}
 </head>
 <body>
 
