--- a/mysite/funds/templates/funds/hold_on_funds.html
+++ b/mysite/funds/templates/funds/hold_on_funds.html
@@ -2,6 +2,18 @@
 
 {% block title %} Hold on Funds {% endblock %}
 
+{% block css %}
+<style type="text/css">
+	.tr_hover:hover {
+		/*color: red;*/
+		border: 2px solid gray;
+		font-weight: bold;
+	}
+</style>
+{% endblock %}
+
+
+
 {% block body %}
 
 	<div class="panel panel-info">
@@ -21,19 +33,21 @@
 		</div>
 		
 	{% if hold_on_fund_list %}
-		<table class="table table-striped">
+		<table class="table table-striped">		
 			<tr>
 				<th>Fund Name</th>
 				<th>Net Price</th>
 				<th>Latest Date</th>
 			</tr>
-	    {% for fnd in hold_on_fund_list %}
-	    	<tr>
-				<td><a href="#">{{ fnd.fund.fund_name }}</a></td>
-				<td>{{ fnd.netprice }}</td>
-				<td>{{ fnd.date|date:'m-d-Y' }}</td>
-			</tr>        
-	    {% endfor %}
+			<tbody>
+			    {% for fnd in hold_on_fund_list %}
+			    	<tr class="tr_hover">
+						<td><a href="#">{{ fnd.fund.fund_name }}</a></td>
+						<td>{{ fnd.netprice }}</td>
+						<td>{{ fnd.date|date:'m-d-Y' }}</td>
+					</tr>        
+			    {% endfor %}
+		    </tbody>
 		</table>    
 
 	{% else %}
@@ -47,14 +61,12 @@
 {% endblock %}
 
 
-<!-- ignore js -->
-{% comment %}  
+
 {% block js %}
 	<script type="text/javascript">
 		$(document).ready(function(){
-			alert("I'm here.");
+
 		})
 	</script>
 
 {% endblock %}
-{% endcomment %}
