--- a/mysite/funds/templates/funds/hold_on_reports.html
+++ b/mysite/funds/templates/funds/hold_on_reports.html
@@ -34,7 +34,7 @@
 				<th>benefit rate</th>
 			</tr>
 	    {% for fnd in hold_on_funds %}
-	    	<tr>
+	    	<tr class="tr_hover">
 				<td><a href="#">{{ fnd.fund_name }}</a></td>
 				<td>{{ fnd.invest_amount }}</td>
 				<td>{{ fnd.hold_on_shares_count }}</td>
@@ -42,7 +42,7 @@
 				<td>{{ fnd.latest_netprice }} ({{ fnd.latest_date|date:'m-d-Y' }})</td>
 				<td>{{ fnd.hold_on_unit_price }}</td>
 				<td>{{ fnd.benefits }}</td>
-				<td>{{ fnd.benefit_rate }}%</td>
+				<td data-rate="{{fnd.benefit_rate }}">{{ fnd.benefit_rate }}%</td>
 			</tr>        
 	    {% endfor %}
 		</table>    
@@ -54,5 +54,37 @@
 	</div>
 
 
+
+{% endblock %}
+
+
+{% block js %}
+	<script type="text/javascript">
+		$(document).ready(function(){
+			
+			$(".tr_hover td[data-rate]").each(function(){
+				var context = $(this).context;
+				var td = $(context);
+				var tr = context.parentElement;
+				var rate = Number(td.attr("data-rate"));
+				
+				var rowStatus = ""
+
+				if ( 3.0 <= rate) {
+					rowStatus = "success";					
+				} else if (rate <= -10.0) {
+					rowStatus = "danger";
+				} else if (rate <= -3.0) {
+					rowStatus = "warning";
+				}
+
+				if (rowStatus !== "") {
+					$(tr).addClass(rowStatus);
+				}
+
+			});
+
+		})
+	</script>
 
 {% endblock %}
