--- a/mysite/funds/templates/funds/hold_on_funds.html
+++ b/mysite/funds/templates/funds/hold_on_funds.html
@@ -1,15 +1,9 @@
 {% extends 'fund_base_page.html' %}
 
-{% block title %} Hold on Funds {% endblock %}
+{% block title %} 净值跟踪 {% endblock %}
 
 {% block css %}
-<style type="text/css">
-	.tr_hover:hover {
-		/*color: red;*/
-		border: 2px solid gray;
-		font-weight: bold;
-	}
-</style>
+
 {% endblock %}
 
 
@@ -18,15 +12,15 @@
 
 	<div class="panel panel-info">
 		<div class="panel-heading">
-			<h3>Hold on funds</h3>
+			<h3>基金净值列表</h3>
 		</div>
 		<div class="panel-body">
 			<div class="pull-right">
 				<a href="{% url 'funds:refresh_netprice' %}" class="btn btn-default">
 					<i class="fa fa-cloud-download fa-lg fa-fw" aria-hidden="true"></i> 
-					update net value</a>
+					更新净值</a>
 				<a href="{% url 'funds:hold_on_reports' %}" class="btn btn-default">
-					see reports
+					查看收益
 					<i class="fa fa-chevron-right  fa-lg fa-fw"></i>
 				</a> 	
 			</div>		
@@ -35,9 +29,9 @@
 	{% if hold_on_fund_list %}
 		<table class="table table-striped">		
 			<tr>
-				<th>Fund Name</th>
-				<th>Net Price</th>
-				<th>Latest Date</th>
+				<th>基金</th>
+				<th>最新净值</th>
+				<th>更新时间</th>
 			</tr>
 			<tbody>
 			    {% for fnd in hold_on_fund_list %}
