--- a/mysite/funds/templates/funds/hold_on_reports.html
+++ b/mysite/funds/templates/funds/hold_on_reports.html
@@ -1,41 +1,41 @@
 {% extends 'fund_base_page.html' %}
 
-{% block title %} Hold on Report {% endblock %}
+{% block title %} 净值跟踪 {% endblock %}
 
 {% block body %}
 
 	<div class="panel panel-info">
 		<div class="panel-heading">
-			<h3>Hold on funds Report</h3>
+			<h3>持有基金净值跟踪</h3>
 		</div>
 		<div class="panel-body">
 			<div class="pull-right">
 				<a href="{% url 'funds:do_confirm_shares' %}" class="btn btn-default">
 					<i class="fa fa-cloud-download fa-lg fa-fw" aria-hidden="true"></i>
-					confirm shares
+					刷新收益
 				</a>
 				<a href="{% url 'funds:hold_on_funds' %}" class="btn btn-default">
-					net value details
+					查看净值列表
 					<i class="fa fa-chevron-right fa-lg fa-fw" aria-hidden="true"></i>
 				</a> 	
 			</div>		
 		</div>
 		
 	{% if hold_on_funds %}
-		<table class="table table-striped">
+		<table class="table table-striped" align="center">
 			<tr>
-				<th>Fund Name</th>
-				<th>Invest Amount</th>
-				<th>Hold on Shares</th>
-				<th>Hold on Amount</th>
-				<th>net price</th>
-				<th>Hold on unitprice</th>
-				<th>benefits</th>
-				<th>benefit rate</th>
+				<th>基金</th>
+				<th>投入金额</th>
+				<th>持有份额</th>
+				<th>持有金额</th>
+				<th>最新净值</th>
+				<th>持有单价</th>
+				<th>收益</th>
+				<th>收益率</th>
 			</tr>
 	    {% for fnd in hold_on_funds %}
 	    	<tr class="tr_hover">
-				<td><a href="#">{{ fnd.fund_name }}</a></td>
+				<td><a href="{% url 'funds:trade_history' fnd.id %}">{{ fnd.fund_name }}</a></td>
 				<td>{{ fnd.invest_amount }}</td>
 				<td>{{ fnd.hold_on_shares_count }}</td>
 				<td>{{ fnd.hold_on_amount_count }}</td>
