modify trade history page

--- a/mysite/funds/templates/funds/hold_on_reports.html
+++ b/mysite/funds/templates/funds/hold_on_reports.html
@@ -22,7 +22,7 @@
 		</div>
 		
 	{% if hold_on_funds %}
-		<table class="table table-striped" align="center">
+		<table class="table" align="center">
 			<tr>
 				<th>基金</th>
 				<th>投入金额</th>
