--- a/mysite/funds/templates/funds/hold_on_funds.html
+++ b/mysite/funds/templates/funds/hold_on_funds.html
@@ -27,7 +27,7 @@
 		</div>
 		
 	{% if hold_on_fund_list %}
-		<table class="table table-striped">		
+		<table class="table">		
 			<tr>
 				<th>基金</th>
 				<th>最新净值</th>
