增加购买操作

--- a/mysite/funds/templates/funds/hold_on_funds.html
+++ b/mysite/funds/templates/funds/hold_on_funds.html
@@ -38,7 +38,7 @@
 			    	<tr class="tr_hover">
 						<td><a href="#">{{ fnd.fund.fund_name }}</a></td>
 						<td>{{ fnd.netprice }}</td>
-						<td>{{ fnd.date|date:'m-d-Y' }}</td>
+						<td>{{ fnd.date|date:'Y-m-d' }}</td>
 					</tr>        
 			    {% endfor %}
 		    </tbody>
