--- a/mysite/funds/templates/fund_base_page.html
+++ b/mysite/funds/templates/fund_base_page.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'funds/content/bootstrap.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'funds/content/bootstrap-theme.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'funds/content/font-awesome-4.7.0/css/font-awesome.min.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'funds/content/bootstrap-datepicker3.min.css' %}">
 
 	<style type="text/css">
 		.tr_hover:hover {
@@ -32,6 +33,7 @@
 
 <script type="text/javascript" src="{% static 'funds/scripts/jquery-2.1.0.js' %}"></script>
 <script type="text/javascript" src="{% static 'funds/scripts/bootstrap.js' %}"></script>
+<script type="text/javascript" src="{% static 'funds/scripts/bootstrap-datepicker.min.js' %}"></script>
 {% block js %}
 	<!-- js here -->
 	<script type="text/javascript">
