--- a/mysite/funds/templates/funds/hold_on_reports.html
+++ b/mysite/funds/templates/funds/hold_on_reports.html
@@ -32,7 +32,7 @@
 				<th>持有金额</th>
 				<th>更新时间</th>
 				<th>最新净值</th>
-				<th>持有单价</th>
+				<th>投入单价</th>
 				<th>收益</th>
 				<th>收益率</th>
 			</tr>
